Fixed map force scroll on small screens

--- a/UI/parcels/map.css
+++ b/UI/parcels/map.css
@@ -1,4 +1,6 @@
 #map {
     height: 400px;
     width: 100%;
+    overflow-x: scroll;
+    min-width: 340px;
 }
